Created initial markup for session 1-2 solutions

--- a/html/text-structure-tags.html
+++ b/html/text-structure-tags.html
@@ -8,40 +8,71 @@
 <body>
     <main>
         <header>
-            <h1>Structure and Functions of Microtubules</h1>
-            <section>
-                <h2>Introduction</h2>
-                <p>
-                    Microtubules form as a highly organised network of polarised
-                    tube filaments from a protein called tubulin (John & Dave, 2016).
-                    Its regulation is needed for processes such as mitosis, cell
-                    migration, cell signalling and cell trafficking. The microtubules
-                    themselves are regulated by several kinases and phosphatases via
-                    signalling cascades, and concomitantly by interactions with actin
-                    cytoskeleton and adhesion sites.
-                </p>
-            </section>
-            <section>
-                <h2>Cell Morphology and Function</h2>
-                <p>
-                    As the name implies, microtubules are hollow tubes having an
-                    external diameter of roughly 25nm and a cell wall thickness of
-                    5-7nm. One of their functions is to transport organelles (e.g.
-                    secretetory vesicles) through the cytoplasm, a particularly important
-                    role in nerve cells where axoplasmic flow is required. They also have a
-                    critical role in cilia and flagella movement. Microtubules originate
-                    from a complex structure known as centrosome.
-                </p>
-                <p>
-                    Between cell divisions, the centrosome is located at the centre of a
-                    cell near the nucleus. Embedded in the centrosome are two cylindrical
-                    centrioles, arranged at right angles to each other (Murphy & Farrell, 2012).
-                    At the onset of cell division, a centrosome divides and the two daughter
-                    centrosomes move to opposite poles of the nucleus to form a mitotic spindle
-                </p>
-            </section>
+            <h1>Student Diet & Health Concerns</h1>
+            <i>
+                <p>by William Martin</p>
+            </i>
         </header>
+        <section>
+            <h2>Introduction</h2>
+            <p>
+                The obesity epidemic observed in the UK and other Western
+                nations over the past two decades has
+
+                <quote>"increased the focuson eating habits of the nation"</quote>
+
+                (James, 2008, p. S120). In an
+                attempt to promote better health of the population and reduce
+                the burden of obesity and related health conditions on the NHS,
+                the recent government white paper Healthy Lives, Healthy People
+                (HM Government, 2010, p. 19) has identified improvements in
+                diet and lifestyle as a priority in public health policy.
+            </p>
+        </section>
+        <section>
+            <h2>Eating Habits of University Students</h2>
+            <i>
+                <h3>Home leavers</h3>
+            </i>
+            <p>
+                It is widely accepted that students leaving home to attend university
+                are likely to experience a significant shift in their lifestyle,
+                including their diet, and this is supported by research evidence
+                from the UK and other European countries (Papadaki et al., 2007,
+                p. 169). This may encompass increased alcohol intake, reduced intake
+                of fruit and vegetables, and increased intake of processed or fatty
+                foods,
+
+                <quote>"as well as impacting on overall eating patterns"</quote>
+
+                (Arnot, 2010,online; Dodd et al., 2010, p. 73; Spanos & Hankey, 2010, p. 102).
+            </p>
+            <i>
+                <h3>Gender</h3>
+            </i>
+            <p>
+                Some studies have suggested that there may be different patterns of
+                unhealthy eating amongst male and female groups of students. For
+                example research conducted by Dr. Ricardo Costa and Dr. Farzad
+                Amirabdollahian at Coventry University found that male students
+                may be at risk of what they term “disordered eating patterns”.
+                In addition, the study also suggests that males are at greater
+                risk of not eating five portions of fruit and vegetables per day.
+                This research is based on a substantial sample size, using data
+                derived from in-depth interviews with approximately 130 undergraduates,
+                although there are plans to increase this to include nearly 400 participants.
+                It is acknowledged by the researchers that this may represent only those
+                events occurring at one university, although there are also plans to expand
+                the study sample across another two universities in the future
+                (Arnot, 2010, online).
+            </p>
+        </section>
     </main>
+    <footer>
+        <a href="https://www.ukessays.com/services/example-essays/health/student-diet-health-concerns.php">
+            Read the full essay here
+        </a>
+    </footer>
 </body>
 
 </html>
