--- a/html/text-structure-tags.html
+++ b/html/text-structure-tags.html
@@ -17,15 +17,12 @@
             <h2>Introduction</h2>
             <p>
                 The obesity epidemic observed in the UK and other Western
-                nations over the past two decades has
-
-                <quote>"increased the focuson eating habits of the nation"</quote>
-
-                (James, 2008, p. S120). In an
+                nations over the past two decades has <quote>"increased the focuson eating 
+                habits of the nation"</quote> <cite>(James, 2008, p. S120)</cite>. In an 
                 attempt to promote better health of the population and reduce
                 the burden of obesity and related health conditions on the NHS,
                 the recent government white paper Healthy Lives, Healthy People
-                (HM Government, 2010, p. 19) has identified improvements in
+                <cite>(HM Government, 2010, p. 19)</cite> has identified improvements in
                 diet and lifestyle as a priority in public health policy.
             </p>
         </section>
@@ -38,14 +35,12 @@
                 It is widely accepted that students leaving home to attend university
                 are likely to experience a significant shift in their lifestyle,
                 including their diet, and this is supported by research evidence
-                from the UK and other European countries (Papadaki et al., 2007,
-                p. 169). This may encompass increased alcohol intake, reduced intake
+                from the UK and other European countries <cite>(Papadaki et al., 2007,
+                p. 169)</cite>. This may encompass increased alcohol intake, reduced intake
                 of fruit and vegetables, and increased intake of processed or fatty
-                foods,
-
-                <quote>"as well as impacting on overall eating patterns"</quote>
-
-                (Arnot, 2010,online; Dodd et al., 2010, p. 73; Spanos & Hankey, 2010, p. 102).
+                foods, <quote>"as well as impacting on overall eating patterns"</quote>
+                <cite>(Arnot, 2010,online; Dodd et al., 2010, p. 73; Spanos & 
+                Hankey, 2010, p. 102).</cite>
             </p>
             <i>
                 <h3>Gender</h3>
@@ -55,8 +50,8 @@
                 unhealthy eating amongst male and female groups of students. For
                 example research conducted by Dr. Ricardo Costa and Dr. Farzad
                 Amirabdollahian at Coventry University found that male students
-                may be at risk of what they term “disordered eating patterns”.
-                In addition, the study also suggests that males are at greater
+                may be at risk of what they term <quote>“disordered eating patterns”
+                </quote>. In addition, the study also suggests that males are at greater
                 risk of not eating five portions of fruit and vegetables per day.
                 This research is based on a substantial sample size, using data
                 derived from in-depth interviews with approximately 130 undergraduates,
@@ -64,7 +59,7 @@
                 It is acknowledged by the researchers that this may represent only those
                 events occurring at one university, although there are also plans to expand
                 the study sample across another two universities in the future
-                (Arnot, 2010, online).
+                <cite>(Arnot, 2010, online)</cite>.
             </p>
         </section>
     </main>
