Added bold tags to session 3

--- a/html/text-structure-tags.html
+++ b/html/text-structure-tags.html
@@ -32,7 +32,7 @@
                 <h3>Home leavers</h3>
             </i>
             <p>
-                It is widely accepted that students leaving home to attend university
+                It is widely accepted that <b>students leaving home</b> to attend university
                 are likely to experience a significant shift in their lifestyle,
                 including their diet, and this is supported by research evidence
                 from the UK and other European countries <cite>(Papadaki et al., 2007,
@@ -49,7 +49,7 @@
                 Some studies have suggested that there may be different patterns of
                 unhealthy eating amongst male and female groups of students. For
                 example research conducted by Dr. Ricardo Costa and Dr. Farzad
-                Amirabdollahian at Coventry University found that male students
+                Amirabdollahian at <b>Coventry University</b> found that male students
                 may be at risk of what they term <quote>“disordered eating patterns”
                 </quote>. In addition, the study also suggests that males are at greater
                 risk of not eating five portions of fruit and vegetables per day.
