--- a/css/basics-selectors.html
+++ b/css/basics-selectors.html
@@ -8,6 +8,7 @@
       media="screen"
       href="basics-selectors.css"
     />
+    <title>CSS basics & selectors</title>
   </head>
 
   <body>
@@ -16,7 +17,7 @@
       <div>
         <h2>Basic stylings</h2>
         <h3>Vanilla ipsum</h3>
-        <p>
+        <p class="italic">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
           consequat eros vitae magna venenatis, in vehicula nibh auctor. Nam
           imperdiet metus ac purus sagittis, non condimentum metus mollis. Proin
@@ -25,7 +26,8 @@
         </p>
         <h3>Hipster-ipsum</h3>
         <p>
-          Lorem ipsum dolor amet pinterest lo-fi umami 90's. Ethical organic
+          Lorem ipsum dolor amet
+          <span class="bold">pinterest lo-fi umami 90's</span>. Ethical organic
           cloud bread pug sartorial art party salvia forage occupy keffiyeh
           artisan literally wayfarers. Forage umami hexagon street art portland.
           Swag poutine flexitarian, hammock meggings kitsch hashtag umami
@@ -33,16 +35,17 @@
           franzen cloud bread church-key ugh prism etsy.
         </p>
       </div>
-      <div>
+      <div id="text-center">
         <h2>Selectors</h2>
-        <h3>Cat ipsum</h3>
-        <p>
-          Hate dog. Relentlessly pursues moth. Cat not kitten around nap all
-          day. This human feeds me, i should be a god eat prawns daintily with a
-          claw then lick paws clean wash down prawns with a lap of carnation
-          milk then retire to the warmest spot on the couch to claw at the
-          fabric before taking a catnap. Plop down in the middle where everybody
-          walks.
+        <h3 class="italic">Cat ipsum</h3>
+        <p id="green-font">
+          Hate dog.
+          <span class="italic">Relentlessly pursues moth.</span> Cat not kitten
+          around nap all day. This human feeds me, i should be a god eat prawns
+          daintily with a claw then lick paws clean wash down prawns with a lap
+          of carnation milk then retire to the warmest spot on the couch to claw
+          at the fabric before taking a catnap. Plop down in the middle where
+          everybody walks.
         </p>
       </div>
     </main>
