--- a/css/flex-box/flex-box.html
+++ b/css/flex-box/flex-box.html
@@ -18,11 +18,51 @@
     </header>
     <main>
       <div id="left-panel">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <h3>Panel #1</h3>
+          <ul>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Panel #2</h3>
+          <ul>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Panel #3</h3>
+          <ul>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+            <li>Lorem ipsum listem itum</li>
+          </ul>
+        </div>
       </div>
-      <div id="right-panel"></div>
+      <div id="right-panel">
+        <h3>Right-hand panel</h3>
+        <p>
+          dis parturient montes, nascetur ridiculus mus. Praesent imperdiet in
+          nibh a sodales. Vivamus tristique nisl quis nunc posuere tempus. Nam
+          molestie, nisi sit amet condimentum scelerisque, lectus ante feugiat
+          justo, at semper odio erat vulputate quam. Etiam ornare, ante faucibus
+          sodales pulvinar, eros massa feugiat leo, ac suscipit tellus mi a
+          nisl. Vivamus est felis, condimentum vel velit a, efficitur blandit
+          diam. Donec semper lectus eu condimentum fermentum. Integer sagittis
+          urna faucibus magna vestibulum, eu vestibulum quam hendrerit. Donec
+          mollis, nisi varius feugiat maximus, enim magna convallis leo, vel
+          tincidunt urna nulla eget justo. Nam nec sapien a ligula consequat
+          commodo. Nam vehicula lacinia nunc, at varius libero. Phasellus mauris
+          metus, vestibulum at rutrum in, gravida ut neque. Fusce pharetra nibh
+          ac blandit lacinia. Nam vehicula lacinia nunc, at varius libero.
+          Phasellus mauris metus, vestibulum at rutrum in, gravida ut neque.
+          Fusce pharetra nibh ac blandit lacinia.
+        </p>
+      </div>
     </main>
   </body>
 </html>
