--- a/css/images-links/images-links.html
+++ b/css/images-links/images-links.html
@@ -7,6 +7,8 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
+      width="500"
+      height="300"
       href="images-links.css"
     />
   </head>
@@ -14,7 +16,7 @@
     <main>
       <div class="card">
         <div class="card-info">
-          <img src="./scenic.jpg" alt="Scenic picture" />
+          <img src="./assets/scenic.jpg" alt="Scenic picture" />
           <h2>Link to info on the same page</h2>
           <h3>Local image (same folder)</h3>
           <a href="#external-links">Jump to external links</a>
@@ -22,7 +24,12 @@
       </div>
       <div class="card">
         <div class="card-info">
-          <img src="./assets/lighthouse.jpg" alt="Lighthouse image" />
+          <img
+            width="500"
+            height="300"
+            alt="Lighthouse image"
+            src="./assets/lighthouse.jpg"
+          />
           <h2>Link to page on local site</h2>
           <h3>Local image (different folder)</h3>
           <a href="additional-page.html">Local link</a>
