Re-organised folder structure

--- a/web-basics/html/doc-structure.html
+++ b/web-basics/html/doc-structure.html
@@ -56,12 +56,6 @@
         </p>
       </section>
     </main>
-    <footer>
-      <a
-        href="https://www.ukessays.com/services/example-essays/health/student-diet-health-concerns.php"
-      >
-        Read the full essay here
-      </a>
-    </footer>
+    <footer></footer>
   </body>
 </html>
