--- a/web-basics/html/text-grouping-tags.html
+++ b/web-basics/html/text-grouping-tags.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Text and structural tags</title>
+    <title>Text and grouping tags</title>
   </head>
 
   <body>
@@ -68,12 +68,6 @@
         </p>
       </section>
     </main>
-    <footer>
-      <a
-        href="https://www.ukessays.com/services/example-essays/health/student-diet-health-concerns.php"
-      >
-        Read the full essay here
-      </a>
-    </footer>
+    <footer></footer>
   </body>
 </html>
