--- a/advanced-web/forms/forms.html
+++ b/advanced-web/forms/forms.html
@@ -8,111 +8,118 @@
   </head>
   <body>
     <main>
+      <h1>Form & webhook challenge</h1>
       <form
         action="https://webhook.site/fa8634a8-9977-48e4-a18b-cb5934118872"
         target="_blank"
         method="POST"
       >
-        <fieldset>
-          <input
-            type="text"
-            name="firstName"
-            id="firstName"
-            placeholder="First name"
-            class="block"
-            required
-          />
-          <input
-            type="text"
-            name="lastName"
-            id="lastName"
-            placeholder="Last name"
-            class="block"
-          />
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Email address"
-            class="block"
-            required
-          />
-          <input
-            type="password"
-            name="password"
-            id="password"
-            minlength="6"
-            placeholder="Password - 6 letters (Upper & lower)"
-            class="block"
-            pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-            required
-          />
-          <label class="label" for="gender">Gender:</label>
-          <input
-            type="radio"
-            name="gender"
-            value="male"
-            class="click-input"
-            checked
-          />
-          Male<br />
-          <input
-            type="radio"
-            name="gender"
-            value="female"
-            class="click-input"
-          />
-          Female<br />
-          <input type="radio" name="gender" value="other" class="click-input" />
-          Other<br />
-        </fieldset>
-        <fieldset>
-          <textarea
-            rows="10"
-            name="about"
-            id="about"
-            placeholder="Something interesting about you..."
-            class="block"
-          ></textarea>
-        </fieldset>
-        <fieldset>
-          <label class="label" for="vehicle1 vehicle2 vehicle3"
-            >Do you own a:</label
-          >
-          <input
-            type="checkbox"
-            name="vehicle1"
-            value="Bike"
-            class="click-input"
-          />
-          Bike<br />
-          <input
-            type="checkbox"
-            name="vehicle2"
-            value="Car"
-            class="click-input"
-          />
-          Car<br />
-          <input
-            type="checkbox"
-            name="vehicle3"
-            value="Lambretta"
-            class="click-input"
-            id="last-check"
-          />
-          Lambretta<br />
-        </fieldset>
-        <fieldset>
-          <label class="label" for="graduation">Date of graduation:</label>
-          <input
-            class="block"
-            type="date"
-            id="graduation"
-            name="graduation"
-            max="2019-05-25"
-            required
-          />
-        </fieldset>
+        <div id="form-fields">
+          <fieldset id="details">
+            <input
+              type="text"
+              name="firstName"
+              id="firstName"
+              placeholder="First name"
+              class="block"
+              required
+            />
+            <input
+              type="text"
+              name="lastName"
+              id="lastName"
+              placeholder="Last name"
+              class="block"
+            />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email address"
+              class="block"
+              required
+            />
+            <input
+              type="password"
+              name="password"
+              id="password"
+              minlength="6"
+              placeholder="Password - 6 letters (upper & lower)"
+              class="block"
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              required
+            />
+            <label class="label" for="gender">Gender:</label>
+            <input
+              type="radio"
+              name="gender"
+              value="male"
+              class="click-input"
+              checked
+            />
+            Male<br />
+            <input
+              type="radio"
+              name="gender"
+              value="female"
+              class="click-input"
+            />
+            Female<br />
+            <input
+              type="radio"
+              name="gender"
+              value="other"
+              class="click-input"
+            />
+            Other<br />
+          </fieldset>
+          <fieldset>
+            <textarea
+              rows="10"
+              name="about"
+              id="about"
+              placeholder="Something interesting about you..."
+              class="block"
+            ></textarea>
+            <label class="label" for="graduation">Date of graduation:</label>
+            <input
+              class="block"
+              type="date"
+              id="graduation"
+              name="graduation"
+              max="2019-05-25"
+              required
+            />
+          </fieldset>
+          <fieldset>
+            <label class="label" for="vehicle1 vehicle2 vehicle3"
+              >Do you own a:</label
+            >
+            <input
+              type="checkbox"
+              name="vehicle1"
+              value="Bike"
+              class="click-input"
+            />
+            Bike<br />
+            <input
+              type="checkbox"
+              name="vehicle2"
+              value="Car"
+              class="click-input"
+            />
+            Car<br />
+            <input
+              type="checkbox"
+              name="vehicle3"
+              value="Lambretta"
+              class="click-input"
+              id="last-check"
+            />
+            Lambretta<br />
+          </fieldset>
+          <!-- <fieldset></fieldset> -->
+        </div>
         <input type="submit" value="Submit" id="submit" />
       </form>
     </main>
