--- a/advanced-web/scss/scss.html
+++ b/advanced-web/scss/scss.html
@@ -2,10 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Scss & accessibility</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="scss.scss" />
+    <title>Scss</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="scss.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <main></main>
+    <header>
+      <h1>Sassy CSS challenge page</h1>
+    </header>
+    <main>
+      <div id="lhs-panel" class="translucent side-panel">
+        <div class="translucent"></div>
+        <div class="translucent"></div>
+        <div class="translucent"></div>
+      </div>
+      <div id="mdl-panel" class="translucent">
+        <div class="translucent"></div>
+        <div class="translucent"></div>
+      </div>
+      <div id="rhs-panel" class="translucent side-panel">
+        <div class="translucent"></div>
+        <div class="translucent"></div>
+        <div class="translucent"></div>
+      </div>
+    </main>
   </body>
 </html>
