Removed h tags to use headers only

--- a/web-basics/doc-structure/doc-structure.html
+++ b/web-basics/doc-structure/doc-structure.html
@@ -8,13 +8,13 @@
 
 <body>
   <header>
-    <h1>Student Diet & Health Concerns</h1>
+    Student Diet & Health Concerns
     <p>by William Martin</p>
   </header>
   <main>
     <section>
       <header>
-        <h2>Introduction</h2>
+        Introduction
       </header>
       <p>
         The obesity epidemic observed in the UK and other Western nations over
@@ -29,9 +29,11 @@
     </section>
     <section>
       <header>
-        <h2>Eating Habits of University Students</h2>
+        Eating Habits of University Students
       </header>
-      <h3>Home leavers</h3>
+      <p>
+        Home leavers
+      </p>
       <p>
         It is widely accepted that students leaving home to attend university
         are likely to experience a significant shift in their lifestyle,
@@ -42,7 +44,9 @@
         well as impacting on overall eating patterns" (Arnot, 2010, online;
         Dodd et al., 2010, p. 73; Spanos & Hankey, 2010, p. 102).
       </p>
-      <h3>Gender</h3>
+      <p>
+        Gender
+      </p>
       <p>
         Some studies have suggested that there may be different patterns of
         unhealthy eating amongst male and female groups of students. For
