--- a/frameworks/jquery/index.html
+++ b/frameworks/jquery/index.html
@@ -7,21 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="http://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
   </head>
   <body>
     <main>
       <section id="content-clck">
-        <button>Click for content</button>
+        <button id="show">Show content</button>
       </section>
-      <section>
-        <h3>Close</h3>
-        <h1>MAIN CONTENT</h1>
+      <section id="content-panel" class="content">
+        <button id="hide" onClick="hideContent()">Hide</button>
+        <section>
+          <input type="text" id="edit" />
+          <button onClick="editText(edit.value)">Edit content</button>
+          <h3 id="output">Edited text here</h3>
+        </section>
+        <section id="hover-div">
+          <h3 id="hover-prompt">Hover here for function</h3>
+          <div id="fade-div">
+            <h3>Fade-in content</h3>
+            <button id="animator">Animate</button>
+          </div>
+        </section>
+        <div id="slide-div">
+          <h3>Slide-down div</h3>
+        </div>
       </section>
     </main>
   </body>
+  <script src="main.js"></script>
 </html>
