--- a/frameworks/jquery/index.html
+++ b/frameworks/jquery/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Jquery</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script
@@ -14,27 +14,28 @@
   </head>
   <body>
     <main>
-      <section id="content-clck">
-        <button id="show">Show content</button>
-      </section>
-      <section id="content-panel" class="content">
-        <button id="hide" onClick="hideContent()">Hide</button>
+      <h1>Show content</h1>
+      <div id="content">
         <section>
-          <input type="text" id="edit" />
-          <button onClick="editText(edit.value)">Edit content</button>
+          <button id="section-hide">Hide sections</button>
+        </section>
+        <section id="edit-sec">
+          <div>
+            <input type="text" id="edit" />
+            <button onClick="editText(edit.value)">Edit content</button>
+            <button id="color-change">Change colour</button>
+          </div>
           <h3 id="output">Edited text here</h3>
         </section>
-        <section id="hover-div">
-          <h3 id="hover-prompt">Hover here for function</h3>
-          <div id="fade-div">
-            <h3>Fade-in content</h3>
-            <button id="animator">Animate</button>
+        <section>
+          <div>
+            <button id="fade-btn">Fade in div</button>
+            <button id="animate-btn">Animate div</button>
           </div>
+          <div id="fade-div"></div>
         </section>
-        <div id="slide-div">
-          <h3>Slide-down div</h3>
-        </div>
-      </section>
+        <section></section>
+      </div>
     </main>
   </body>
   <script src="main.js"></script>
