Created extension challenge

--- a/frameworks/jquery/extension/index.html
+++ b/frameworks/jquery/extension/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Jquery challenge</title>
+    <title>Extension</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script
@@ -34,9 +34,16 @@
           </div>
           <div id="fade-div"></div>
         </section>
-        <section>
-          <h3>Extension TBC</h3>
+        <section id="ext-sec">
+          <button id="ext-btn">Replicate this</button>
+          <button id="final-btn">And lastly...</button>
         </section>
+
+        <div class="final-div" id="d1"></div>
+        <div class="final-div" id="d2"></div>
+        <div class="final-div" id="d3"></div>
+        <div class="final-div" id="d4"></div>
+        <div class="final-div" id="d5"></div>
       </div>
     </main>
   </body>
