Extension screenshos added

--- a/frameworks/jquery/extension/index.html
+++ b/frameworks/jquery/extension/index.html
@@ -22,7 +22,7 @@
         <section id="edit-sec">
           <div>
             <input type="text" id="edit" />
-            <button onClick="editText(edit.value)">Edit content</button>
+            <button onClick="editText(edit.value)">Edit text</button>
             <button id="color-change">Change colour</button>
           </div>
           <h3 id="output">Edited text here</h3>
