--- a/web-basics/basics-selectors/extension/basics-extended.html
+++ b/web-basics/basics-selectors/extension/basics-extended.html
@@ -13,8 +13,10 @@
 
   <body>
     <main>
-      <section>
+      <header>
         <h1>Hello CSS!</h1>
+      </header>
+      <section>
         <div>
           <h2>Basic stylings</h2>
           <h3>Vanilla ipsum</h3>
