--- a/web-basics/lists/lists.html
+++ b/web-basics/lists/lists.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <main>
-      <div class="panel">
+      <section class="panel">
         <div class="list-container">
-          <h1>Vanilla list</h1>
+          <h2>Vanilla list</h2>
           <ul id="vanilla-list">
             <li>10px space between items</li>
             <li>Square bullets</li>
@@ -17,17 +17,17 @@
           </ul>
         </div>
         <div class="list-container">
-          <h1>Ordered list</h1>
+          <h2>Ordered list</h2>
           <ol id="ordered-list">
             <li>Greek alphabet</li>
             <li>Bullet position inside</li>
             <li>1.25 x default font-size</li>
           </ol>
         </div>
-      </div>
-      <div class="panel">
+      </section>
+      <section class="panel">
         <div class="list-container">
-          <h1>Nested lists</h1>
+          <h2>Nested lists</h2>
           <ul id="nested-list">
             <li>Sans serif & bolder</li>
             <li>Nested list</li>
@@ -39,7 +39,7 @@
           </ul>
         </div>
         <div class="list-container">
-          <h1>List with definitions</h1>
+          <h2>List with definitions</h2>
           <dl>
             <dt>HTML</dt>
             <dd>- Creates website markup</dd>
@@ -49,7 +49,7 @@
             <dd>- Provides functionality and interactivity</dd>
           </dl>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
