Refactored advanced web solution files

--- a/advanced-web/accessibility/accessibility.html
+++ b/advanced-web/accessibility/accessibility.html
@@ -20,9 +20,8 @@
   <body>
     <header>
       <nav>
-        <div id="logo">
-          <h1 tabindex="1">_nology</h1>
-        </div>
+        <h1 id="logo" tabindex="1">_nology</h1>
+
         <div id="icons">
           <a href="#" aria-label="User profile" tabindex="2">
             <i class="fa fa-user-circle" aria-hidden="true"></i>
