--- a/advanced-web/responsiveness/extension/responsive-extension.html
+++ b/advanced-web/responsiveness/extension/responsive-extension.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <main>
-      <div id="nav">
+      <nav>
         <div id="logo">_nology</div>
         <div id="nav-links">
           <a href="#">Link #1</a>
           <a href="#">Link #2</a>
           <a href="#">Link #3</a>
         </div>
-      </div>
+      </nav>
       <div id="pic-container">
         <div id="circle-pic"></div>
       </div>
