--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML & CSS Challenges</title>
+    <title>Document</title>
 </head>
 
 <body>
+
     <main>
         <h1>HTML & CSS Challenges</h1>
         <section>
@@ -21,6 +22,7 @@
             </ol>
         </section>
     </main>
+
 </body>
 
 </html>
