--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  <title>Document</title>
+  <title>_nology challenges</title>
 </head>
 
 <body>
 
   <main>
-    <h1>HTML & CSS Challenges</h1>
+    <h1>HTML & CSS challenges</h1>
     <section>
       <header>
-        <h2>Web basics</h2>
+        <h2>Example solutions</h2>
       </header>
+      <h3>Web basics</h3>
       <ol>
-        <li><a href="/web-basics/doc-structure/index.html">Document structure</a></li>
-        <li><a href="/web-basics/text-grouping/index.html">Text grouping</a></li>
+        <li><a href="/web-basics/doc-structure/doc-structure.html">Document structure</a></li>
+        <li><a href="/web-basics/text-grouping/text-grouping-tags.html">Text grouping</a></li>
+        <li><a href="/web-basics/basics-selectors/basics-selectors.html">Basic selectors</a></li>
       </ol>
     </section>
   </main>
