--- a/advanced-web/scss/solution/extension.html
+++ b/advanced-web/scss/solution/extension.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="scss-extension.css"
+      href="extension.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
