--- a/advanced-web/scss/solution/index.html
+++ b/advanced-web/scss/solution/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Scss</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="scss.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
