advanced web challenges restructured

--- a/advanced-web/accessibility/solution/index.html
+++ b/advanced-web/accessibility/solution/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="accessibility.css"
+      href="main.css"
     />
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -52,7 +52,7 @@
         </fieldset>
       </form>
       <img
-        src="./background.jpg"
+        src="../assets/background.jpg"
         tabindex="9"
         alt="Nology background image"
         height="300px"
