--- a/advanced-web/responsiveness/solution/index.html
+++ b/advanced-web/responsiveness/solution/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="responsive-extension.css"
+      href="main.css"
     />
   </head>
   <body>
