--- a/index.html
+++ b/index.html
@@ -17,12 +17,23 @@
       <header>
         <h2>Example solutions</h2>
       </header>
-      <h3>Web basics</h3>
-      <ol>
-        <li><a href="/web-basics/doc-structure/doc-structure.html">Document structure</a></li>
-        <li><a href="/web-basics/text-grouping/text-grouping-tags.html">Text grouping</a></li>
-        <li><a href="/web-basics/basics-selectors/basics-selectors.html">Basic selectors</a></li>
-      </ol>
+      <section>
+        <h3>Web basics</h3>
+        <ol>
+          <li><a href="/web-basics/doc-structure/doc-structure.html">Document structure</a></li>
+          <li><a href="/web-basics/text-grouping/text-grouping-tags.html">Text grouping</a></li>
+          <li><a href="/web-basics/basics-selectors/basics-selectors.html">Basic selectors</a></li>
+        </ol>
+      </section>
+      <section>
+        <h3>Advanced web</h3>
+        <ol>
+          <li><a href="advanced-web/scss/solution/">scss</a></li>
+          <li><a href="advanced-web/forms/solution/">forms</a></li>
+          <li><a href="advanced-web/responsiveness/solution/">responsiveness</a></li>
+          <li><a href="advanced-web/accessibility/solution/">accessibility</a></li>
+        </ol>
+      </section>
     </section>
   </main>
 
