--- a/advanced-web/forms/solution/index.html
+++ b/advanced-web/forms/solution/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>HTML forms</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="forms.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
     <main>
