--- a/advanced-web/responsiveness/solution/extension.html
+++ b/advanced-web/responsiveness/solution/extension.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="responsive-design.css"
+      href="extension.css"
     />
   </head>
   <body>
