update challenge structure

--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
       <section>
         <h3>Web basics</h3>
         <ol>
-          <li><a href="/web-basics/doc-structure/doc-structure.html">Document structure</a></li>
-          <li><a href="/web-basics/text-grouping/text-grouping-tags.html">Text grouping</a></li>
-          <li><a href="/web-basics/basics-selectors/basics-selectors.html">Basic selectors</a></li>
+          <li><a href="/web-basics/doc-structure/solution/index.html">Document structure</a></li>
+          <li><a href="/web-basics/text-grouping/solution/index.html">Text grouping</a></li>
+          <li><a href="/web-basics/basics-selectors/solution/index.html">Basic selectors</a></li>
+          <li><a href="/web-basics/box-model/solution/index.html">Box model</a></li>
+          <li><a href="/web-basics/lists/solution/index.html">lists</a></li>
+          <li><a href="/web-basics/images-links/solution/index.html">Images & links</a></li>
+          <li><a href="/web-basics/flex-box/solution/index.html">Flexbox</a></li>
         </ol>
       </section>
       <section>
