--- a/web-basics/basics-selectors/solution/extension/index.html
+++ b/web-basics/basics-selectors/solution/extension/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="basics-extended.css "
+      href="main.css "
     />
     <title>CSS basics & selectors</title>
   </head>
