--- a/web-basics/flex-box/solution/index.html
+++ b/web-basics/flex-box/solution/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Flex-box</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="flex-box.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
     <header>
