--- a/web-basics/images-links/solution/extension/index.html
+++ b/web-basics/images-links/solution/extension/index.html
@@ -7,21 +7,21 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="images-links-extended.css"
+      href="main.css"
     />
   </head>
   <body>
     <main>
       <div class="card">
         <img
-          src="../assets/lighthouse.jpg"
+          src="../../assets/lighthouse.jpg"
           alt="Lighthouse image"
           id="lighthouse"
           height="80%"
           width="80%"
         />
         <div class="card-info">
-          <a href="../additional-page.html">
+          <a href="../../additional-page.html">
             <button id="button-link">Local page</button>
           </a>
         </div>
@@ -29,7 +29,7 @@
       <div class="card">
         <div id="scenic-bg"></div>
         <div class="card-info">
-          <a href="../additional-page.html" id="styled-link">Local page</a>
+          <a href="../../additional-page.html" id="styled-link">Local page</a>
         </div>
       </div>
       <div class="card">
@@ -38,7 +38,7 @@
           id="image-link"
           target="_blank"
           ><img
-            src="../assets/lavender.jpg"
+            src="../../assets/lavender.jpg"
             alt="Lavender field"
             id="lavender"
             height="100%"
