--- a/web-basics/images-links/solution/index.html
+++ b/web-basics/images-links/solution/index.html
@@ -9,14 +9,14 @@
       media="screen"
       width="500"
       height="300"
-      href="images-links.css"
+      href="main.css"
     />
   </head>
   <body>
     <main>
       <div class="card">
         <div class="card-info">
-          <img src="./assets/scenic.jpg" alt="Scenic picture" />
+          <img src="../assets/scenic.jpg" alt="Scenic picture" />
           <h2>Link to info on the same page</h2>
           <h3>Local image (same folder)</h3>
           <a href="#external-links">Jump to external links</a>
@@ -28,7 +28,7 @@
             width="500"
             height="300"
             alt="Lighthouse image"
-            src="./assets/lighthouse.jpg"
+            src="../assets/lighthouse.jpg"
           />
           <h2>Link to page on local site</h2>
           <h3>Local image (different folder)</h3>
