--- a/web-basics/lists/solution/index.html
+++ b/web-basics/lists/solution/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>HTML lists</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="lists.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
   <body>
     <main>
