--- a/web-basics/box-model/solution/index.html
+++ b/web-basics/box-model/solution/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="box-model.css"
+      href="main.css"
     />
   </head>
   <body>
