home page update

--- a/index.html
+++ b/index.html
@@ -39,6 +39,32 @@
         </ol>
       </section>
     </section>
+    <section>
+      <header>
+        <h2>Challenges</h2>
+      </header>
+      <section>
+        <h3>Web basics</h3>
+        <ol>
+          <li><a href="/web-basics/doc-structure/challenge/index.html">Document structure</a></li>
+          <li><a href="/web-basics/text-grouping/challenge/index.html">Text grouping</a></li>
+          <li><a href="/web-basics/basics-selectors/challenge/index.html">Basic selectors</a></li>
+          <li><a href="/web-basics/box-model/challenge/index.html">Box model</a></li>
+          <li><a href="/web-basics/lists/challenge/index.html">lists</a></li>
+          <li><a href="/web-basics/images-links/challenge/index.html">Images & links</a></li>
+          <li><a href="/web-basics/flex-box/challenge/index.html">Flexbox</a></li>
+        </ol>
+      </section>
+      <section>
+        <h3>Advanced web</h3>
+        <ol>
+          <li><a href="advanced-web/scss/challenge/">scss</a></li>
+          <li><a href="advanced-web/forms/challenge/">forms</a></li>
+          <li><a href="advanced-web/responsiveness/challenge/">responsiveness</a></li>
+          <li><a href="advanced-web/accessibility/challenge/">accessibility</a></li>
+        </ol>
+      </section>
+    </section>
   </main>
 
 </body>
