Updated solution for doc structure

--- a/web-basics/doc-structure/solution/index.html
+++ b/web-basics/doc-structure/solution/index.html
@@ -8,13 +8,13 @@
 
 <body>
   <header>
-    Student Diet & Health Concerns
+    <h1>Student Diet & Health Concerns</h1>
     <p>by William Martin</p>
   </header>
   <main>
     <section>
       <header>
-        Introduction
+        <h2>Introduction</h2> 
       </header>
       <p>
         The obesity epidemic observed in the UK and other Western nations over
@@ -29,11 +29,11 @@
     </section>
     <section>
       <header>
-        Eating Habits of University Students
+        <h2>Eating Habits of University Students</h2>
       </header>
-      <p>
+      <h3>
         Home leavers
-      </p>
+      </h3>
       <p>
         It is widely accepted that students leaving home to attend university
         are likely to experience a significant shift in their lifestyle,
@@ -44,9 +44,9 @@
         well as impacting on overall eating patterns" (Arnot, 2010, online;
         Dodd et al., 2010, p. 73; Spanos & Hankey, 2010, p. 102).
       </p>
-      <p>
+      <h3>
         Gender
-      </p>
+      </h3>
       <p>
         Some studies have suggested that there may be different patterns of
         unhealthy eating amongst male and female groups of students. For
