Updated solution files

--- a/web-basics/images-links/solution/extension/index.html
+++ b/web-basics/images-links/solution/extension/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <main>
-      <div class="card">
+      <section class="card">
         <img
           src="../../assets/lighthouse.jpg"
           alt="Lighthouse image"
@@ -25,14 +25,14 @@
             <button id="button-link">Local page</button>
           </a>
         </div>
-      </div>
-      <div class="card">
+      </section>
+      <section class="card">
         <div id="scenic-bg"></div>
         <div class="card-info">
           <a href="../../additional-page.html" id="styled-link">Local page</a>
         </div>
-      </div>
-      <div class="card">
+      </section>
+      <section class="card">
         <a
           href="https://www.w3schools.com/html/html_links.asp"
           id="image-link"
@@ -47,7 +47,7 @@
         <div class="card-info">
           <h2>Click the image above...</h2>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
