--- a/web-basics/images-links/solution/index.html
+++ b/web-basics/images-links/solution/index.html
@@ -14,15 +14,15 @@
   </head>
   <body>
     <main>
-      <div class="card">
+      <section class="card">
         <div class="card-info">
           <img src="../assets/scenic.jpg" alt="Scenic picture" />
           <h2>Link to info on the same page</h2>
           <h3>Local image (same folder)</h3>
           <a href="#external-links">Jump to external links</a>
         </div>
-      </div>
-      <div class="card">
+      </section>
+      <section class="card">
         <div class="card-info">
           <img
             width="500"
@@ -34,8 +34,8 @@
           <h3>Local image (different folder)</h3>
           <a href="additional-page.html">Local link</a>
         </div>
-      </div>
-      <div class="card">
+      </section>
+      <section class="card">
         <div id="external-links" class="card-info">
           <img src="http://placekitten.com/500/300" alt="Kitten image" />
           <h2>Link to external site</h2>
@@ -46,7 +46,7 @@
             >W3 schools - HTML links</a
           >
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
