--- a/web-basics/box-model/solution/index.html
+++ b/web-basics/box-model/solution/index.html
@@ -17,23 +17,23 @@
           Nav bar // Banner
         </h1>
       </nav>
-      <div id="card-container">
-        <div class="card" id="card-1">
-          <h3>
+      <section id="card-container">
+        <article class="card" id="card-1">
+          <h2>
             Card #1
-          </h3>
-        </div>
-        <div class="card" id="card-2">
-          <h3>
+          </h2>
+        </article>
+        <article class="card" id="card-2">
+          <h2>
             Card #2
-          </h3>
-        </div>
-        <div class="card" id="card-3">
-          <h3>
+          </h2>
+        </article>
+        <article class="card" id="card-3">
+          <h2>
             Card #3
-          </h3>
-        </div>
-      </div>
+          </h2>
+        </article>
+      </section>
       <div id="jumbotron">Jumbotron</div>
     </main>
   </body>
