Updated links solution

--- a/web-basics/images-links/solution/index.html
+++ b/web-basics/images-links/solution/index.html
@@ -19,7 +19,7 @@
           <img src="../assets/scenic.jpg" alt="Scenic picture" />
           <h2>Link to info on the same page</h2>
           <h3>Local image (same folder)</h3>
-          <a href="#external-links">Jump to external links</a>
+          <a href="#external-links">Link to id on same page</a>
         </div>
       </section>
       <section class="card">
