Had another go at the scss challenge from today, as didn't get very far with it before. Much happier after giving it a go this evening, but i can't seem to get the hover working correctly. Would love some feedback on what might going wrong there. Thank you.

--- a/advanced-web/responsiveness/challenge/index copy.html
+++ b/advanced-web/responsiveness/challenge/index copy.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="main.css">
-  <title>Index</title>
+  <link rel="stylesheet" href="main copy.css">
+  <title>Copy</title>
 </head>
 <body>
 
@@ -19,17 +19,19 @@
         </ul>
     </nav>
   </header>
-  <section>
-    <div class="balloonpic">
-      <img class="lavender" src="../assets/lavender.jpg" alt="Field of lavender with hot air balloon">
-    </div>
+
+    <div class="container"> 
+    <section id="picture">
+      <div class="balloonpic">
+        <img class="lavender" src="../assets/lavender.jpg" alt="Field of lavender with hot air balloon">
+      </div>
     </section>
-  <div class="container">
-    <div>About Me</div>
-    <div>Hobbies</div>
-    <div> Contact</div>
-    <div>Employment</div>
-    <div>Education</div>
+
+    <div id="about">About Me</div>
+    <div id="hobbies">Hobbies</div>
+    <div id="contact"> Contact</div>
+    <div id="employment">Employment</div>
+    <div id="education">Education</div>
   </div>
 </body>
 </html>
