--- a/advanced-web/scss/challenge/index.html
+++ b/advanced-web/scss/challenge/index.html
@@ -3,10 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css"/>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Sassy CSS Page</title>
 </head>
 <body>
+  <header>
+    <h1> Sassy CSS Challenge Page</h1>
+  </header>
+
+  <div class=container>
+  <main>
+    <!-- <img class=background-image src="../assets/background-2.jpg" alt= "Background image with blue puff of smoke on the right side."> -->
+
+    <article class=leftandright>
+      <div class=landr id=divpink></div>
+      <div class=landr id=divpurple></div>
+      <div class=landr id=divpurple></div>
+    </article>
+
+    <article class=middleone>
+      <div class=greendivs></div>
+      <div class=greendivs></div>
+    </article>
+
+    <article class=leftandright>
+      <div class=landr id=divpink></div>
+      <div class=landr id=divpink></div>
+      <div class=landr id=divpink></div>
+    </article>
+  </main>
+</div>
+
+
   
 </body>
 </html>
